# isobmff

./: .gitignore  CMakeLists.txt  README.md  _i_s_o_movies_8h.html  _i_s_o_movies_8h_source.html  _m_p4_movies_8h.html  _m_p4_movies_8h_source.html  _m_p4_o_s_macros_8h.html  _m_p4_o_s_macros_8h_source.html  annotated.html  bug.html  classes.html  deprecated.html  dir_6547dd3b2cfea2f3b0ccca1f59f9f1f7.html  dir_d33fa7af865608e426a3a6d08960d3ab.html  dir_d4136d7b1516b086d6eb6c8b8f8a8594.html  dir_e4055eeae56c24465721b5de00f8e166.html  doxygen_crawl.html  files.html  globals.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_func_m.html  globals_func_n.html  globals_func_q.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  globals_n.html  globals_q.html  globals_s.html  globals_type.html  group___i_p_m_p_x.html  group___i_s_m_a.html  (+43 more)
.github/workflows/: c-cpp.yml  clang-format.yml
IsoLib/audio_example/: CMakeLists.txt
IsoLib/drc_in_isom/: CMakeLists.txt
IsoLib/favs_example/src/: demux_main.c  hevc.c  hevc.h  structures.h  tools.c
IsoLib/hevc_extractors/: CMakeLists.txt
IsoLib/hevc_extractors/macosx/: CMakeLists.txt
IsoLib/hevc_extractors/src/: HEVCExtractorReader.cpp
IsoLib/ipmp_example/: CMakeLists.txt
IsoLib/ipmp_example/src/: protectAudioMovie.c
IsoLib/isoiff_tool/: CMakeLists.txt
IsoLib/isoiff_tool/src/: HEVCDecoderConfigRecord.c
IsoLib/isoiff_tool/w32/isoiff/: isoiff.dsp
IsoLib/libisomediafile/: CMakeLists.txt
IsoLib/libisomediafile/linux/libisomediafile/: Makefile
IsoLib/libisomediafile/macosx/libisomediafile/: Makefile
IsoLib/libisomediafile/src/: HEVCConfigAtom.c  HumanReadableStreamDescriptionAtom.c  ISOMovies.h  ISOSampleDescriptions.c  LHEVCConfigAtom.c  MP4Atoms.c  MP4Atoms.h  MP4ColourInformationAtom.c  MP4Impl.h  MP4Media.c  MP4Movies.c  MP4Movies.h  MP4OrdinaryTrackReader.c  MP4TrackReader.c  MP4TrackReader.h  MetadataKeyTableBox.c  SampleGroupDescriptionAtom.c  SampleTableAtom.c  SegmentIndexAtom.c  T35CommonHeaderBox.c  T35MetadataSampleEntry.c  TimeToSampleAtom.c  TrackAtom.c  TrackFragmentAtom.c  VisualSampleEntryAtom.c
IsoLib/libisomediafile/w32/libisomediafile/: libisomedia.dsp
IsoLib/pcm_audio_example/: CMakeLists.txt
IsoLib/pcm_sniffer/: CMakeLists.txt  pcm_sniffer.cpp
IsoLib/t35_tool/: CMakeLists.txt  README.md  SMPTE_ST2094_50.cpp  SMPTE_ST2094_50.hpp  av1_tool.cpp  t35_tool.cpp  t35_tool_v2.cpp  test_all_modes.sh
IsoLib/t35_tool/common/: Logger.cpp  Logger.hpp  MetadataTypes.cpp  MetadataTypes.hpp  T35Prefix.cpp  T35Prefix.hpp
IsoLib/t35_tool/extraction/: AutoExtractor.cpp  AutoExtractor.hpp  DedicatedIt35Extractor.cpp  DedicatedIt35Extractor.hpp  ExtractionStrategy.cpp  ExtractionStrategy.hpp  MebxIt35Extractor.cpp  MebxIt35Extractor.hpp  MebxMe4cExtractor.cpp  MebxMe4cExtractor.hpp  SampleGroupExtractor.cpp  SampleGroupExtractor.hpp  SeiExtractor.cpp  SeiExtractor.hpp
IsoLib/t35_tool/injection/: BitstreamStrategy.cpp  BitstreamStrategy.hpp  DedicatedIt35Strategy.cpp  DedicatedIt35Strategy.hpp  InjectionStrategy.cpp  InjectionStrategy.hpp  MebxIt35Strategy.cpp  MebxIt35Strategy.hpp  MebxMe4cStrategy.cpp  MebxMe4cStrategy.hpp  SampleGroupStrategy.cpp  SampleGroupStrategy.hpp  StrategyHelpers.cpp  StrategyHelpers.hpp
IsoLib/t35_tool/sources/: GenericJsonSource.cpp  GenericJsonSource.hpp  MetadataSource.cpp  MetadataSource.hpp  SMPTEFolderSource.cpp  SMPTEFolderSource.hpp  SMPTE_ST2094_50.cpp  SMPTE_ST2094_50.hpp
IsoLib/t35_tool/test_data/: README.md  test_t35_tool.sh
IsoLib/t35_tool/test_data/ExampleJson/: ST2094-50_CustomToneMapping_metadataItems.json  ST2094-50_DefaultToneMapping_metadataItems.json  ST2094-50_ReferenceWhiteOnly_metadataItems.json
TestData/isobmff/: AllExamples.sh  ST2094-50_LightDetector.mov
TestData/isobmff/CustomTMO/: 1_ST2094-50_OneAlternates_metadataItems.json  2_ST2094-50_OneAlternates-MaxValues_metadataItems.json  4_ST2094-50_FourAlternates_metadataItems.json
TestData/isobmff/DefaultToneMapRWTMO/: 0_ST2094-50_RWTMO-min-headroom_metadataItems.json  1_ST2094-50_RWTMO-mid-headroom_metadataItems.json  2_ST2094-50_RWTMO-max-headroom_metadataItems.json
TestData/isobmff/NoAdaptiveToneMap/: 0_ST2094-50_NoAdaptiveToneMap-DefaultWhite_metadataItems.json  2_ST2094-50_NoAdaptiveToneMap-MinWhite_metadataItems.json
TestData/t35_tool/: test_all_modes.sh  test_basic.sh  test_manifest.json  test_smpte2094-50.sh
TestData/t35_tool/CustomTMO/: 0_ST2094-50_ClampInRec601_metadataItems.json
TestData/t35_tool/NoAdaptiveToneMap/: 1_ST2094-50_NoAdaptiveToneMap-123-White_metadataItems.json  3_ST2094-50_NoAdaptiveToneMap-MaxWhite_metadataItems.json
search/: all_4.js  all_a.js  all_f.js
test/: CMakeLists.txt  test_01_simple.cpp  test_data.h  test_helpers.h  test_mebx.cpp  test_sample_groups.cpp  test_t35.cpp
